# ed25519-donna

./: CMakeLists.txt  ed25519-hash.h  ed25519.c
